--- a/ffg/package.json
+++ b/ffg/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^4.3.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
