update for new interface

--- a/ffg/package.json
+++ b/ffg/package.json
@@ -25,7 +25,10 @@
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
-    "firebase": "^6.3.0",
+    "firebase": "^6.3.1",
+    "firebase-tools": "^7.1.1",
+    "firebaseui": "^4.1.0",
+    "firebaseui-angular": "^4.0.0",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^4.3.0",
     "rxjs": "~6.3.3",
