update for latest changes

--- a/ffg/package.json
+++ b/ffg/package.json
@@ -25,7 +25,9 @@
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
-    "firebase": "^6.3.1",
+    "firebase": "^6.3.4",
+    "firebase-admin": "^8.3.0",
+    "firebase-functions": "^3.2.0",
     "firebase-tools": "^7.1.1",
     "firebaseui": "^4.1.0",
     "firebaseui-angular": "^4.0.0",
