--- a/ffg/package.json
+++ b/ffg/package.json
@@ -31,6 +31,7 @@
     "firebase-tools": "^7.1.1",
     "firebaseui": "^4.1.0",
     "firebaseui-angular": "^4.0.0",
+    "jshint": "^2.10.2",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^4.3.0",
     "rxjs": "~6.3.3",
