--- a/app/package.json
+++ b/app/package.json
@@ -11,47 +11,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^8.1.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/fire": "^5.2.1",
-    "@angular/forms": "~7.2.0",
+    "@angular/animations": "^7.2.16",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^7.2.16",
+    "@angular/compiler": "^7.2.16",
+    "@angular/core": "^7.2.16",
+    "@angular/fire": "^5.4.2",
+    "@angular/forms": "^7.2.16",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
-    "firebase": "^7.15.0",
-    "firebase-admin": "^8.3.0",
-    "firebase-functions": "^3.2.0",
-    "firebase-tools": "^7.3.0",
-    "firebaseui": "^4.1.0",
-    "firebaseui-angular": "^4.0.0",
-    "jshint": "^2.10.2",
-    "moment": "^2.24.0",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/router": "^7.2.16",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
+    "bootstrap": "^4.5.0",
+    "core-js": "^2.6.11",
+    "firebase": "^7.15.1",
+    "firebase-admin": "^8.12.1",
+    "firebase-functions": "^3.7.0",
+    "firebase-tools": "^7.16.2",
+    "firebaseui": "^4.5.1",
+    "firebaseui-angular": "^4.1.0",
+    "jshint": "^2.11.1",
+    "moment": "^2.26.0",
     "ngx-bootstrap": "^4.3.0",
     "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
+    "tslib": "^1.13.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
-    "@angular/cli": "^9.1.7",
-    "@angular/compiler-cli": "^9.1.9",
-    "@angular/language-service": "~7.2.0",
+    "@angular-devkit/build-angular": "^0.901.8",
+    "@angular/cli": "^9.1.8",
+    "@angular/compiler-cli": "^9.1.11",
+    "@angular/language-service": "^7.2.16",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.9",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^7.0.0",
