--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "^9.1.11",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "^9.1.11",
+    "@angular/localize": "^9.1.11",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^9.1.11",
     "@angular/platform-browser-dynamic": "^9.1.11",
