--- a/app/package.json
+++ b/app/package.json
@@ -15,25 +15,25 @@
     "@angular/common": "~10.0.14",
     "@angular/compiler": "~10.0.14",
     "@angular/core": "~10.0.14",
-    "@angular/fire": "^6.0.2",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.0.14",
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
-    "bootstrap": "^4.5.2",
-    "firebase": "^7.19.1",
-    "rxjs": "^7.0.0-beta.4",
-    "tslib": "^2.0.0",
+    "bootstrap": "^4.5.3",
+    "firebase": "^7.24.0",
+    "rxjs": "^7.0.0-beta.8",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.8",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "~10.0.8",
     "@angular/compiler-cli": "~10.0.14",
-    "@types/jasmine": "^3.5.14",
+    "@types/jasmine": "^3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.54",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^12.19.1",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
