--- a/app/package.json
+++ b/app/package.json
@@ -11,25 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.14",
-    "@angular/common": "~10.0.14",
-    "@angular/compiler": "~10.0.14",
-    "@angular/core": "~10.0.14",
+    "@angular/animations": "~10.2.0",
+    "@angular/common": "~10.2.0",
+    "@angular/compiler": "~10.2.0",
+    "@angular/core": "~10.2.0",
     "@angular/fire": "^6.0.3",
-    "@angular/forms": "~10.0.14",
-    "@angular/platform-browser": "~10.0.14",
-    "@angular/platform-browser-dynamic": "~10.0.14",
-    "@angular/router": "~10.0.14",
+    "@angular/forms": "~10.2.0",
+    "@angular/platform-browser": "~10.2.0",
+    "@angular/platform-browser-dynamic": "~10.2.0",
+    "@angular/router": "~10.2.0",
     "bootstrap": "^4.5.3",
     "firebase": "^7.24.0",
-    "rxjs": "^7.0.0-beta.8",
+    "rxjs": "7.0.0-beta.8",
     "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "~10.2.0",
-    "@angular/compiler-cli": "~10.0.14",
+    "@angular/compiler-cli": "~10.2.0",
     "@types/jasmine": "^3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.1",
