--- a/cloud-functions/functions/package.json
+++ b/cloud-functions/functions/package.json
@@ -15,10 +15,14 @@
   "main": "lib/index.js",
   "dependencies": {
     "@types/request-promise": "^4.1.46",
-    "firebase-admin": "^8.13.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "firebase-admin": "^9.3.0",
     "firebase-functions": "^3.10.0",
     "https": "^1.0.0",
     "json-diff": "^0.5.4",
+    "json-to-html": "^0.1.2",
+    "node-json2html": "^1.4.0",
     "request-promise": "^4.2.5",
     "rxjs": "^6.6.2"
   },
